force-app/main/default/objects/PurchaseLine__c/PurchaseLine__c.object-meta.xml
<CustomObject>
  <label>Purchase Line</label>
  <pluralLabel>Purchase Lines</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Purchase Line Number</label>
    <displayFormat>PL-{0000}</displayFormat>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>