force-app/main/default/objects/PurchaseLine__c/fields/Amount__c.field-meta.xml
<CustomField>
  <fullName>Amount__c</fullName>
  <label>Amount</label>
  <type>Number</type>
  <precision>16</precision>
  <scale>0</scale>
</CustomField>