force-app/main/default/objects/PurchaseLine__c/fields/ItemId__c.field-meta.xml
<CustomField>
  <fullName>ItemId__c</fullName>
  <label>Item</label>
  <type>MasterDetail</type>
  <referenceTo>Item__c</referenceTo>
  <relationshipLabel>Purchase Lines</relationshipLabel>
  <relationshipName>PurchaseItemLines</relationshipName>
</CustomField>