force-app/main/default/objects/PurchaseLine__c/fields/PurchaseId__c.field-meta.xml
<CustomField>
  <fullName>PurchaseId__c</fullName>
  <label>Purchase</label>
  <type>MasterDetail</type>
  <referenceTo>Purchase__c</referenceTo>
  <relationshipLabel>Purchase Lines</relationshipLabel>
  <relationshipName>PurchaseLines</relationshipName>
</CustomField>