force-app/main/default/objects/PurchaseLine__c/fields/UnitCost__c.field-meta.xml
<CustomField>
  <fullName>UnitCost__c</fullName>
  <label>Unit Cost</label>
  <type>Number</type>
  <precision>16</precision>
  <scale>2</scale>
</CustomField>